Fix Blog shortcode pagination style
There was an overlapping issue that made half the buttons unclickable.

--- a/src/scss/_post.scss
+++ b/src/scss/_post.scss
@@ -8,12 +8,6 @@
   }
 }
 
-.blog-posts._nested {
-  .pagination {
-    margin-top: -1rem;
-  }
-}
-
 :is(.blog-posts, .latest-posts) {
   .post {
     padding-bottom: 1rem;
